# typeagent-py

./: .coveragerc  .env-example  .env-template  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Makefile  NOTES.md  PYDANTIC_AI.md  README.md  TADA.md  TODO.md  make.bat  pyproject.toml  pytest.ini  tmp_debug_tag.py
.claude/: settings.json
.github/: code-conventions.md  copilot-instructions.md
demo/: README.md  ingest.py  transcript.txt
docs/: README.md  StructuredRagPyBay25.pptx  VSCode-Setup-Pluging-Pyright.md  demos.md  developing.md  env-vars.md  getting-started.md  gmail.md  high-level-api.md  mail-example.md  query-method.md
examples/: simple_query_demo.py
gmail/: demo_quotequail.py  gmail_dump.py
scripts/: block-git-mutations.sh  block_git_mutations.py
test/: conftest.py  fixtures.py  test_add_messages_with_indexing.py  test_auth.py  test_collections.py  test_conversation_metadata.py  test_demo.py  test_email_import.py  test_embedding_consistency.py  test_embeddings.py  test_factory.py  test_incremental_index.py  test_interfaces.py  test_knowledge.py  test_kplib.py  test_mcp_server.py  test_message_text_index_population.py  test_message_text_index_serialization.py  test_messageindex.py  test_online.py  test_poc_security.py  test_podcast_incremental.py  test_podcasts.py  test_property_index_population.py  test_propindex.py  test_query.py  test_query_method.py  test_related_terms_fast.py  test_related_terms_index_population.py  test_reltermsindex.py  test_searchlib.py  test_secindex.py  test_secindex_storage_integration.py  test_semrefindex.py  test_serialization.py  test_sqlite_indexes.py  test_sqlitestore.py  test_storage_providers_unified.py  test_timestampindex.py  test_transcripts.py  (+2 more)
testdata/: Short.html
tests/: conftest.py  test_add_messages_pipeline.py  test_add_messages_streaming.py  test_answers.py  test_benchmark_embeddings.py  test_collections.py  test_conversation_metadata.py  test_convsettings.py  test_convthreads.py  test_email_import.py  test_embedding_consistency.py  test_embeddings.py  test_hooks.py  test_incremental_index.py  (+36 more)
(+812 files in other folders)
