[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "typeagent"
version = "0.3.3"
description = "Incremental message indexing and querying pipelines using Structured RAG"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Guido van Rossum", email = "gvanrossum@microsoft.com" },
  { name = "Steven Lucco" },
  { name = "Umesh Madan" },
  { name = "Guido van Rossum" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "azure-identity>=1.22.0",
  "black>=25.1.0",
  "colorama>=0.4.6",
  "mcp[cli]>=1.12.1",
  "numpy>=2.2.6",
  "openai>=1.81.0",
  "pydantic>=2.11.4",
  "python-dotenv>=1.1.0",
  "tiktoken>=0.12.0",
  "typechat>=0.0.4",
  "webvtt-py>=0.5.1",
]

[project.optional-dependencies]
dev = [
  "azure-mgmt-authorization>=4.0.0",
  "azure-mgmt-keyvault>=12.1.1",  
  "coverage[toml]>=7.9.1",
  "google-api-python-client>=2.184.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "logfire>=4.1.0",
  "opentelemetry-instrumentation-httpx>=0.57b0",
  "pydantic-ai-slim[openai]>=0.5.0",
  "pyright==1.1.406",  # 407 has a regression
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-mock>=3.14.0",
]

[project.urls]
GitHub = "https://github.com/microsoft/typeagent-py"
Documentation = "https://github.com/microsoft/typeagent-py/tree/main/docs/README.md"

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["test"]